# WindInput

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  VERSION  build_all.bat  build_all.ps1  dev.ps1
.github/workflows/: ci.yml  docs-site.yml  release.yml
config_examples/: AGENTS.md
data/: AGENTS.md  compat.yaml  config.yaml
data/dict/: AGENTS.md  common_chars.txt
data/dict/pinyin/: AGENTS.md  base.txt
data/examples/: phrases.example.yaml
data/schemas/: pinyin.schema.yaml  shuangpin.schema.yaml  wubi86.schema.yaml  wubi86_pinyin.schema.yaml
docs/: AGENTS.md  FEATURES_TODO.md  TESTING_GUIDE.md  architecture.md  async-ipc-optimization-plan.md  codetable_filter_design.md  memory-optimization.md  refactoring-schema.md  test-helper.html  test_word_frequency.md
docs/archive/: codetable-filter-design.md  memory-optimization.md  refactoring-schema.md
docs/design/: dict-patch.md  pinyin-candidate-quality.md  pinyin-data-analysis.md  quick-input-design.md  startmenu-zorder-solution.md
docs/release-notes/: header.md  v0.1.0-alpha.md
docs/requirements/: wubi-requirements-todo.md  wubi-requirements.md
docs/superpowers/plans/: 2026-04-15-dict-ui-refactor.md  2026-04-15-jsonrpc-control.md  2026-04-16-store-cleanup.md  2026-04-16-ui-framework-migration.md
docs/testing/: settings-checklist.md
installer/: AGENTS.md  install.bat  install.ps1  uninstall.bat  uninstall.ps1
installer/nsis/: AGENTS.md  WindInput.nsi
scripts/: bump-version.ps1
wind_input/: AGENTS.md  README.md  go.mod  go.sum
wind_input/cmd/: AGENTS.md
wind_input/cmd/gen_bindict/: AGENTS.md  main.go
wind_input/cmd/gen_codetable_wdb/: main.go
wind_input/cmd/gen_unigram/: AGENTS.md  main.go
wind_input/cmd/gen_wubi_wdb/: AGENTS.md  main.go
wind_input/cmd/service/: AGENTS.md  logging.go  main.go
wind_input/cmd/test_codetable/: AGENTS.md  main.go
wind_input/configs/: AGENTS.md  shadow.example.yaml
wind_input/internal/: AGENTS.md  WEIGHT_SHADOW_ANALYSIS.md
wind_input/internal/bridge/: AGENTS.md  deferred_handler.go  host_render.go  protocol.go  server.go  server_handler.go  server_push.go
wind_input/internal/candidate/: AGENTS.md  candidate.go  candidate_test.go  filter.go
wind_input/internal/clipboard/: clipboard.go
wind_input/internal/config/: config.go
wind_input/internal/control/: AGENTS.md  server.go
wind_input/internal/coordinator/: AGENTS.md  confirmed_segments_test.go  coordinator.go  handle_addword.go  handle_candidate_action.go  handle_candidates.go  handle_clipboard.go  handle_config.go  handle_config_menu.go  handle_config_state.go  handle_key_action.go  handle_key_event.go  handle_lifecycle.go  handle_mode.go  handle_punctuation.go  handle_quick_input.go  handle_quick_input_pinyin.go  handle_temp_english.go  handle_temp_mode.go  handle_temp_pinyin.go  handle_ui_callbacks.go  pinyin_mode_shared.go  quick_input_calc.go  quick_input_calc_test.go  quick_input_date.go  quick_input_date_test.go  quick_input_number.go  quick_input_number_test.go  reload_handler.go  stats.go
wind_input/internal/dict/: AGENTS.md  adapter.go  codetable.go  common_chars.go  composite.go  dict.go  english_dict.go  english_dict_test.go  layer.go  loader.go  manager.go  manager_test.go  phrase.go  phrase_test.go  pinyin_dict.go  pinyin_dict_test.go  shadow.go  shadow_test.go  store_layer.go  temp_dict.go  template.go  trie.go  trie_test.go  user_dict.go  user_dict_freq_test.go
wind_input/internal/engine/: AGENTS.md  engine.go  manager.go  manager_config.go  manager_convert.go  manager_english.go  manager_init.go  manager_temp_pinyin.go  manager_userfreq.go
wind_input/internal/hotkey/: AGENTS.md  compiler.go
wind_input/internal/ipc/: AGENTS.md  binary_codec.go  binary_protocol.go  protocol.go  server.go
wind_input/internal/rpc/: config_service.go  config_service_test.go  dict_service.go  event.go  phrase_service.go  server.go  server_test.go  shadow_service.go  stats_service.go  system_service.go
wind_input/internal/schema/: AGENTS.md  factory.go  learning.go  loader.go  manager.go  schema.go  schema_test.go  types.go
wind_input/internal/settings/: config_handler.go  engine_handler.go  log_handler.go  router.go  server.go  status_handler.go  test_handler.go
wind_input/internal/state/: AGENTS.md
wind_input/internal/store/: stat_collector.go  stats.go  stats_test.go  store.go  user_words.go  write_buffer_test.go
wind_input/internal/transform/: AGENTS.md  fullwidth.go  punctuation.go
wind_input/internal/ui/: AGENTS.md  dpi.go  dwrite_text.go  events.go  font_config.go  gdi_text.go  global_hotkey.go  layered_window.go  manager.go  manager_candidate.go  manager_config.go  manager_indicator.go  manager_toolbar.go  monitor.go  popup_menu.go  popup_menu_event.go  popup_menu_render.go  protocol.go  renderer.go  renderer_layout.go  (+11 more)
wind_input/pkg/: AGENTS.md
wind_input/themes/: AGENTS.md
wind_portable/: MainForm.cs  RegistrationManager.cs  ServiceManager.cs  deploy.go  go.mod  go.sum  main.go  manager.go  process_windows.go  register_windows.go  tray.go  winapi_windows.go
wind_portable/winres/: winres.json
wind_setting/: AGENTS.md  app.go  app_config.go  app_dict.go  app_dict_export.go  app_dict_import.go  app_dict_phrase.go  app_dict_schema.go  app_dict_shadow.go  app_dict_userdict.go  app_schema.go  app_service.go  app_stats.go  go.mod  go.sum  main.go  singleton_windows.go  version.go  wails.json
wind_setting/frontend/: AGENTS.md  pnpm-lock.yaml
wind_setting/internal/: AGENTS.md
wind_tsf/: AGENTS.md  CMakeLists.txt  README.md  wind_tsf.def
wind_tsf/include/: AGENTS.md  BinaryProtocol.h  CaretEditSession.h  ClassFactory.h  DisplayAttributeInfo.h  FileLogger.h  Globals.h  HotkeyManager.h  IPCClient.h  KeyEventSink.h  LangBarItemButton.h  Register.h  TextService.h
wind_tsf/res/: AGENTS.md  version.rc.in
wind_tsf/src/: AGENTS.md  CaretEditSession.cpp  ClassFactory.cpp  DisplayAttributeInfo.cpp  FileLogger.cpp  Globals.cpp  HostWindow.cpp  HotkeyManager.cpp  IPCClient.cpp  KeyEventSink.cpp  LangBarItemButton.cpp  Register.cpp  TextService.cpp  WindDWriteShim.cpp  dllmain.cpp
(+179 files in other folders)
